--- a/fp.css
+++ b/fp.css
@@ -12,6 +12,11 @@ body{
     font-family: 'Alatsi', sans-serif;
 }
 
-
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 10%;
+  }
 
 
